# anagrambot

./: Cargo.toml  LICENSE  README.md  WORDLIST-LICENSE  rustfmt.toml  words.txt
anabot/: Cargo.toml  README.md
anabot/src/: arg.rs  main.rs
anagrambot/: Cargo.toml  README.md  WORDLIST-LICENSE  words.txt
anagrambot/examples/: benchmark.rs
anagrambot/src/: anagram.rs  default_wordlist.rs  lib.rs  wordlist.rs
anagrambot/src/anagram/: loose_anagram.rs
anagrambot_cli/: Cargo.toml
refine_wordlist/: newlist.txt  refine_wordlist.py  rejects.txt
src/: anagram.rs  default_wordlist.rs  lib.rs  main.rs  wordlist.rs
src/anagram/: loose_anagram.rs
