[package]
name = "anagrambot"
authors = ["generic-user1"]
description = "A library and CLI tool to find anagrams of words"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/generic-user1/anagrambot"
keywords = ["anagram", "anagrams"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

[features]

# Don't build a wordlist into the library and require an external wordlist file
no-default-wordlist = []

[dependencies]
