[package]
name = "anagrambot_cli"
authors = ["generic-user1"]
description = "A library and CLI tool to find anagrams of words"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/generic-user1/anagrambot"
keywords = ["anagram", "anagrams"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

[dependencies]

anagrambot = {path = "../anagrambot"}

clap = {version = "3.2.12", features = ["derive"]}